force-app/main/default/objects/Park_Tour__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Park Tour</relationshipLabel>
    <relationshipName>Park_Tour</relationshipName>
    <type>Lookup</type>
</CustomField>