force-app/main/default/objects/Park_Tour__c/fields/Arrival_Time__c.field-meta.xml
<CustomField>
    <fullName>Arrival_Time__c</fullName>
    <description>The datetime the lead/contact is expected at the park.Typically 30 min before the tour, if it is the first tour. Or at the tour start for subsequent tours. (currently unimplemented logic)</description>
    <inlineHelpText>Has Todo!</inlineHelpText>
    <label>Arrival Time</label>
    <type>DateTime</type>
</CustomField>