force-app/main/default/objects/Park_Tour__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Park Tour</relationshipLabel>
    <relationshipName>Park_Tour</relationshipName>
    <type>Lookup</type>
</CustomField>