force-app/main/default/objects/Park_Tour__c/fields/Park_Interest_Rating__c.field-meta.xml
<CustomField>
    <fullName>Park_Interest_Rating__c</fullName>
    <label>Park Interest Rating</label>
    <length>255</length>
    <type>Text</type>
</CustomField>