force-app/main/default/objects/Park_Tour__c/fields/POI_Synced_On_Insert__c.field-meta.xml
<CustomField>
    <fullName>POI_Synced_On_Insert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>POI Synced On Insert</label>
    <type>Checkbox</type>
</CustomField>