force-app/main/default/objects/Park_Tour__c/fields/Return_Visitor__c.field-meta.xml
<CustomField>
    <fullName>Return_Visitor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Return Visitor</label>
    <type>Checkbox</type>
</CustomField>